--- a/src/style/_services.scss
+++ b/src/style/_services.scss
@@ -12,11 +12,11 @@
 }
 
 .services-content {
-    gap: 1.5rem;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  gap: 1.5rem;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   h2 {
     color: $text-color-two;
@@ -68,7 +68,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem 0.875rem;
-  background-color: #FFF;
+  background-color: #fff;
   z-index: 99;
 
   strong {
@@ -85,5 +85,73 @@
     border-radius: 0.5rem;
     font-size: 1.125rem;
     cursor: default;
+  }
+}
+
+@media (min-width: 250px) and (max-width: 559px) {
+  .services-content {
+    width: 100%;
+
+    h2 {
+      font-size: 2rem;
+    }
+
+    p {
+      display: none;
+    }
+  }
+
+  .haircuts {
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+
+    .haircut {
+      margin-top: 0;
+    }
+
+    .haircut-info {
+      strong {
+        font-size: 1.6rem;
+      }
+
+      button {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+@media (min-width: 560px) and (max-width: 950px) {
+  .services-content {
+    width: 100%;
+
+    h2 {
+      font-size: 2rem;
+    }
+
+    p {
+      display: none;
+    }
+  }
+
+  .haircuts {
+    flex-direction: column;
+    gap: 1rem;
+    border: 1px solid red;
+
+    .haircut {
+      margin-top: 0;
+    }
+
+    .haircut-info {
+      strong {
+        font-size: 1.6rem;
+      }
+
+      button {
+        font-size: 1.5rem;
+      }
+    }
   }
 }
