--- a/src/partials/_colors.scss
+++ b/src/partials/_colors.scss
@@ -1,6 +1,7 @@
 $bg-color-one: #121212;
 $bg-color-two: #ffa500;
 $bg-color-two: rgb(255, 165, 0);
+$bg-color-two-two: rgba(138, 100, 29, 0.986);
 $bg-color-three: #444406;
 $bg-color-four: #f1f1f1;
 $bg-color-five: #000000;
