--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 4.3rem;
+  padding: 4rem;
   gap: 1rem;
   background-color: $bg-color-three;
 
@@ -14,9 +14,9 @@
     gap: 0.85rem;
 
     svg {
-        width: 1.8rem;
-        height: 1.8rem;
-        fill: $bg-color-four;
+      width: 1.8rem;
+      height: 1.8rem;
+      fill: $bg-color-four;
     }
 
     a:hover {
@@ -39,62 +39,79 @@
 }
 
 .logo-footer {
-    width: 30%;
+  width: 30%;
 
-    img {
-        max-width: 100%;
-        height: auto;
-    }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .direitos-footer {
-    font-size: 1.2rem;
-    color: $text-color-three;
-    text-align: center;
+  font-size: 1.2rem;
+  color: $text-color-three;
+  text-align: center;
+}
+
+.desenvolvedor {
+  color: $bg-color-four;
+  font-weight: 400;
+  text-align: center;
+  
+  a {
+    color: $bg-color-four;
+    text-decoration: none;
+    font-weight: 600;
+
+    &:hover {
+      color: $bg-color-two;
+      text-decoration: underline;
+    }
+  }
 }
 
 @media (min-width: 250px) and (max-width: 559px) {
-    .footer {
-        flex-direction: column;
-        gap: 0.5rem;
-        width: 100%;
-    }
-    
-    .logo-footer {
-        width: 100%;
+  .footer {
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
+  }
 
-        img {
-            width: 100%;
-            height: auto;
-        }
-    }
+  .logo-footer {
+    width: 100%;
 
-    .direitos-footer {
-        p {
-        font-size: 1.5rem;
+    img {
+      width: 100%;
+      height: auto;
     }
+  }
+
+  .direitos-footer {
+    p {
+      font-size: 1.8rem;
     }
+  }
 }
 
 @media (min-width: 560px) and (max-width: 950px) {
-    .footer {
-        flex-direction: column;
-        gap: 0.5rem;
-        width: 100%;
-    }
-    
-    .logo-footer {
-        width: 100%;
+  .footer {
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
+  }
 
-        img {
-            width: 100%;
-            height: auto;
-        }
-    }
+  .logo-footer {
+    width: 100%;
 
-    .direitos-footer {
-        p {
-        font-size: 1.5rem;
+    img {
+      width: 100%;
+      height: auto;
     }
+  }
+
+  .direitos-footer {
+    p {
+      font-size: 1.5rem;
     }
+  }
 }
