--- a/src/style/_services.scss
+++ b/src/style/_services.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 3.375rem 0.875rem;
+  padding: 3rem 0.875rem;
   gap: 1.5rem;
 }
 
@@ -35,24 +35,25 @@
 }
 
 .haircuts {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
 }
 
 .haircut {
-  flex: 1;
   display: flex;
   flex-direction: column;
   background-color: transparent;
   border-radius: 0.5rem;
   box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.65);
   overflow: hidden;
-  margin-top: 1.5rem;
+  margin: 0 1rem;
+  width: 320px;
 
   img {
     width: 100%;
+    height: 313px;
     transition: transform 0.5s ease-in-out;
 
     &:hover {
@@ -69,10 +70,11 @@
   align-items: center;
   padding: 1.5rem 0.875rem;
   background-color: #fff;
+  border: 2px solid #fff;
   z-index: 99;
 
   strong {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 700;
   }
 
@@ -88,6 +90,66 @@
   }
 }
 
+.swiper {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: grab;
+
+  &:active {
+    cursor: grabbing;
+  }
+
+  .swiper-slide {
+    padding: 2.5rem;
+  }
+}
+
+.swiper-pagination-bullet {
+  background-color: $bg-color-two;
+}
+
+.swiper-pagination-bullet-active {
+  background: $bg-color-two;
+}
+
+/* Estilizando as setas */
+.swiper-button-prev,
+.swiper-button-next {
+  color: $bg-color-two !important;
+  width: 30px !important;
+  height: 30px !important;
+  border-radius: 50%;
+  padding: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+
+  &::after {
+    font-weight: bold;
+  }
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.8) !important;
+  }
+}
+
+.swiper-button-prev {
+  left: 10px;
+}
+
+.swiper-button-next {
+  right: 10px;
+}
+
+.swiper-button-disabled {
+  opacity: 0.5 !important;
+  cursor: not-allowed;
+}
+
 @media (min-width: 250px) and (max-width: 559px) {
   .services-content {
     width: 100%;
@@ -98,25 +160,28 @@
 
     p {
       display: none;
+      font-size: 1rem;
     }
   }
 
   .haircuts {
     flex-direction: column;
-    gap: 2rem;
     width: 100%;
 
     .haircut {
       margin-top: 0;
+      margin-left: 1.8rem;
     }
 
     .haircut-info {
+      padding: 0.5rem 0.875rem;
+      height: 90px;
       strong {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
       }
 
       button {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
       }
     }
   }
@@ -138,7 +203,6 @@
   .haircuts {
     flex-direction: column;
     gap: 1rem;
-    border: 1px solid red;
 
     .haircut {
       margin-top: 0;
