--- a/src/style/_services.scss
+++ b/src/style/_services.scss
@@ -37,6 +37,7 @@
 .haircuts {
   width: 100%;
   display: flex;
+  height: auto;
   justify-content: center;
   align-items: center;
 }
@@ -48,8 +49,9 @@
   border-radius: 0.5rem;
   box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.65);
   overflow: hidden;
-  margin: 0 1rem;
+  margin-left: 1rem;
   width: 320px;
+  height: auto;
 
   img {
     width: 100%;
@@ -107,15 +109,6 @@
   }
 }
 
-.swiper-pagination-bullet {
-  background-color: $bg-color-two;
-}
-
-.swiper-pagination-bullet-active {
-  background: $bg-color-two;
-}
-
-/* Estilizando as setas */
 .swiper-button-prev,
 .swiper-button-next {
   color: $bg-color-two !important;
@@ -127,6 +120,7 @@
   align-items: center;
   justify-content: center;
   transition: 0.3s;
+  text-shadow: 1px 1px 5px #000;
 
   &::after {
     font-weight: bold;
@@ -135,14 +129,6 @@
   &:hover {
     color: rgba(0, 0, 0, 0.8) !important;
   }
-}
-
-.swiper-button-prev {
-  left: 10px;
-}
-
-.swiper-button-next {
-  right: 10px;
 }
 
 .swiper-button-disabled {
@@ -164,24 +150,29 @@
     }
   }
 
+  .swiper {
+    height: auto;
+  }
+
   .haircuts {
     flex-direction: column;
     width: 100%;
 
     .haircut {
       margin-top: 0;
-      margin-left: 1.8rem;
+      margin-left: 2rem;
     }
 
     .haircut-info {
       padding: 0.5rem 0.875rem;
       height: 90px;
+
       strong {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
       }
 
       button {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
       }
     }
   }
@@ -201,21 +192,25 @@
   }
 
   .haircuts {
-    flex-direction: column;
-    gap: 1rem;
 
     .haircut {
+      width: 260px;
       margin-top: 0;
+      margin-left: 1.5rem;
     }
 
     .haircut-info {
       strong {
-        font-size: 1.6rem;
+        font-size: 1rem;
       }
 
       button {
-        font-size: 1.5rem;
+        font-size: 1rem;
       }
     }
+  }
+
+  .swiper {
+    height: auto;
   }
 }
