--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -17,11 +17,11 @@ header {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom, rgba(28, 30, 6, 0.45), #444406),
-      url('../assets/barbearia.jpg');
+      url('../assets/background.jpg');
     z-index: -1;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 50% 20%;
     opacity: 1.9;
   }
 }
